--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Glass Palace Football Dashboard</h1>
-        <p>Live Data & Analysis for the 2025 Season</p>
+        <p>Live Data & Analysis</p>
     </header>
 
     <main class="dashboard-container">
@@ -18,15 +18,15 @@
             <h2>Live NFL Scores</h2>
             <iframe 
                 src="https://www.sofascore.com/american-football/usa/nfl/widget?im=1" 
-                style="height: 433px; width: 100%; border: none;"
-                scrolling="no"
+                style="height: 500px; width: 100%; border: none;"
+                scrolling="yes"
                 title="NFL Live Scores Widget">
             </iframe>
         </div>
         
         <div id="projections-widget" class="dashboard-widget large-widget">
             <h2>Custom Player Projections (PPFD & Superflex)</h2>
-            <p class="disclaimer"><strong>Disclaimer:</strong> Projections are based on Sleeper data, adjusted for our league's specific scoring. First Downs (PPFD) and Return Yards are estimated. Use for guidance only.</p>
+            <p class="disclaimer"><strong>Disclaimer:</strong> Using 2024 placeholder data. Projections adjusted for our league's scoring. First Downs (PPFD) and Return Yards are estimated.</p>
             <div class="controls">
                 <input type="text" id="projection-search" placeholder="Search player name...">
             </div>
@@ -75,7 +75,7 @@
         <div id="ai-chat" class="dashboard-widget">
             <h2>AI Assistant</h2>
             <iframe 
-                src="https://poe.com/widget/Assistant"
+                src="https://huggingface.co/spaces/microsoft/Phi-3-mini-4k-instruct-gguf/embed"
                 style="width: 100%; height: 500px; border: none;"
                 title="AI Chat Widget">
             </iframe>
